--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -207,15 +207,22 @@
           <div class="col">
             <a href="mailto:emailtoazimi@gmail.com" target="blank">
               <div class="icons"><i class='bx bxs-envelope'></i></div>
-              <h1>Email</h1>
+              <h1>Email me</h1>
             </a>
           </div>
           <div class="col">
-            <a href="tel:+16167529529" target="blank">
-              <div class="icons"><i class='bx bxs-phone'></i></div>
-              <h1>Phone</h1>
+            <a href="sms:+16167529529" target="blank">
+              <div class="icons"><i class='bx bxs-message'></i></div>
+              <h1>Text me</h1>
             </a>
           </div>
+          <div class="col">
+            <a href="tel:+16167529529?body=Hello%Ali!" target="blank">
+              <div class="icons"><i class='bx bxs-phone'></i></div>
+              <h1>Call me</h1>
+            </a>
+          </div>
+          
         </div>
       </div>
 
