new changes added

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -211,13 +211,13 @@
             </a>
           </div>
           <div class="col">
-            <a href="sms:+16167529529" target="blank">
+            <a href="sms:+16167529529?body=Hello%Ali!" target="blank">
               <div class="icons"><i class='bx bxs-message'></i></div>
               <h1>Text me</h1>
             </a>
           </div>
           <div class="col">
-            <a href="tel:+16167529529?body=Hello%Ali!" target="blank">
+            <a href="tel:+16167529529" target="blank">
               <div class="icons"><i class='bx bxs-phone'></i></div>
               <h1>Call me</h1>
             </a>
