--- a/averagedown/index.html
+++ b/averagedown/index.html
@@ -27,25 +27,25 @@
         <div class="col">
           <!-- each column -->
           <label for="buy1">Shares I own:</label><br />
-          <input type="text" inputmode="numeric" id="buy1" name="buy1" />
+          <input type="number" step="any" id="buy1" name="buy1" />
         </div>
         <div class="col">
           <label for="avg1">At price:</label><br />
-          <input type="text" inputmode="numeric" id="avg1" name="avg1" />
+          <input type="number" step="any" id="avg1" name="avg1" />
         </div>
       </div>
       <div class="row">
         <!-- each row -->
         <div class="col">
           <label for="buy2">New shares:</label><br />
-          <input type="text" inputmode="numeric" id="buy2" name="buy2" />
+          <input type="number" step="any" name="buy2" />
         </div>
         <div class="col">
           <label for="avg2">At price:</label><br />
-          <input type="text" inputmode="numeric" id="avg2" name="avg2" />
+          <input type="number" step="any" id="avg2" name="avg2" />
         </div>
       </div>
-      <div class="calculate">
+      <div>
         <a target="_blank" class="btn" title="Calculate">Calculate</a>
       </div>
       <div class="results">
