added a stock average down calculator

--- a/averagedown/index.html
+++ b/averagedown/index.html
@@ -38,7 +38,7 @@
         <!-- each row -->
         <div class="col">
           <label for="buy2">New shares:</label><br />
-          <input type="number" step="any" name="buy2" />
+          <input type="number" step="any" id="buy2" name="buy2" />
         </div>
         <div class="col">
           <label for="avg2">At price:</label><br />
